dogs pdf added to readme. Images renamed to tidy up workspace

--- a/dogs.html
+++ b/dogs.html
@@ -17,13 +17,17 @@
         <li><a class="active" href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul><br>
-    <p class="text1">Here are all the dogs currently available for adoption. If you see a dog you are interested in and
-        would like more information, please
-        contact us using the form on the <a href="form.html">Get in Touch</a> page. We are always happy to talk about
-        how wonderful our dogs are and they love visitors too so why not come along and meet them!</p>
+
+    <div class="container">
+        <p>Here are all the dogs currently available for adoption. If you see a dog you are interested in and
+            would like more information, please contact us using the form on the <a href="form.html">Get in Touch</a>
+            page. We are always happy to talk about
+            how wonderful our dogs are and they love visitors too so why not come along and meet them!</p>
+    </div>
+
     <div class="card-deck">
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/hawk_1.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/hawk.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Hawk</h4>
                 <p class="card-text">7 yr old, Female</p>
@@ -34,7 +38,7 @@
             </div>
         </div>
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/mimi_1.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/mimi.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Mimi</h4>
                 <p class="card-text">2 yr old, Female</p>
@@ -45,7 +49,7 @@
             </div>
         </div>
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/trevor_new_1.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/trevor.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Trevor</h4>
                 <p class="card-text">2 yr old, Male</p>
@@ -56,7 +60,7 @@
             </div>
         </div>
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/dotty_1.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/dotty.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Dotty</h4>
                 <p class="card-text">18 month old, Female</p>
@@ -67,7 +71,7 @@
             </div>
         </div>
         <div class="card bg-light text-dark">
-            <img class="card-img-top" src="assets/images/anton_1.jpg" alt="Photo of dog">
+            <img class="card-img-top" src="assets/images/anton.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Anton</h4>
                 <p class="card-text">3 yr old, Male</p>
