--- a/form.html
+++ b/form.html
@@ -19,58 +19,59 @@
         <li><a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a class="active" href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul><br>
-    <p class="text2">Please use this form to enquire about our dogs. We love to hear from potential new owners
-        and will get back
-        to you to discuss the rehoming process in more detail</p>
+
     <div class="container">
-        <div class="row">
-            <div class="col-sm-6">
-                <h2>Get in Touch</h2>
-                <form method="POST" action="https://formdump.codeinstitute.net/">
-                    <label for="name">Name:</label>
-                    <input id="name" type="text" size="35" required>
-                    <br>
-                    <label for="email">Email:</label>
-                    <input id="email" type="email" size="35" required>
-                    <br>
-                    <label for="phone">Phone No:</label>
-                    <input id="phone" type="tel" size="31">
-                    <br>
-                    <label for="dogs">Name of dog:</label>
-                    <select id="dogs" name="dogs">
-                        <option value="hawk">Hawk</option>
-                        <option value="mimi">Mimi</option>
-                        <option value="trevor">Trevor</option>
-                        <option value="dotty">Dotty</option>
-                        <option value="anton">Anton</option>
-                    </select>
-                    <br>
-                    <label for="comments">Comments:</label>
-                    <br>
-                    <textarea name="comments" id="comments" rows="11" cols="45"> </textarea>
-                    <br>
-                    <input id="submit" type="submit">
-                </form><br>
-                <p>You can also contact us by email hello@homesforhounds.com or via our social media links below</p>
-            </div>
-            <div class="col-sm-6">
-                <h2>How to Find Us</h2>
-                <p>We are conveniently located just minutes from the A48 in Cross Hands, South Wales</p>
-                <p> Homes for Hounds<br>
-                    Greyhound<br>
-                    GR37 4ND<br>
-                    Telephone: 0000 000 000
-                <div>
-                    <iframe id="map"
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11172.809879811417!2d-3.188287399557932!3d51.412969459065074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486ef0ec09dcf8c9%3A0x4309b74e3e39b881!2sGreyhound%20Trust%20Southwest%20Wales!5e0!3m2!1sen!2suk!4v1687791931838!5m2!1sen!2suk"
-                        width="800" height="800" style="border:0;" allowfullscreen="" loading="lazy"
-                        referrerpolicy="no-referrer-when-downgrade"></iframe>
-                </div><br>
-                <p>Opening times:<br>
-                    Mon-Fri 2pm-4pm<br>
-                    Sat & Sun 10am-4pm</p>
-            </div>
+        <p>Please use this form to enquire about our dogs. We love to hear from potential new owners
+            and will get back to you to discuss the rehoming process in more detail</p>
+    </div>
+    <div class="row">
+        <div class="col-sm-6">
+            <h2>Get in Touch</h2>
+            <form method="POST" action="https://formdump.codeinstitute.net/">
+                <label for="name">Name:</label>
+                <input id="name" type="text" size="35" required>
+                <br>
+                <label for="email">Email:</label>
+                <input id="email" type="email" size="35" required>
+                <br>
+                <label for="phone">Phone No:</label>
+                <input id="phone" type="tel" size="31">
+                <br>
+                <label for="dogs">Name of dog:</label>
+                <select id="dogs" name="dogs">
+                    <option value="hawk">Hawk</option>
+                    <option value="mimi">Mimi</option>
+                    <option value="trevor">Trevor</option>
+                    <option value="dotty">Dotty</option>
+                    <option value="anton">Anton</option>
+                </select>
+                <br>
+                <label for="comments">Comments:</label>
+                <br>
+                <textarea name="comments" id="comments" rows="11" cols="45"> </textarea>
+                <br>
+                <input id="submit" type="submit">
+            </form><br>
+            <p>You can also contact us by email hello@homesforhounds.com or via our social media links below</p>
         </div>
+        <div class="col-sm-6">
+            <h2>How to Find Us</h2>
+            <p>We are conveniently located just minutes from the A48 in Cross Hands, South Wales</p>
+            <p> Homes for Hounds<br>
+                Greyhound<br>
+                GR37 4ND<br>
+                Telephone: 0000 000 000
+            <div>
+                <iframe id="map"
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11172.809879811417!2d-3.188287399557932!3d51.412969459065074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486ef0ec09dcf8c9%3A0x4309b74e3e39b881!2sGreyhound%20Trust%20Southwest%20Wales!5e0!3m2!1sen!2suk!4v1687791931838!5m2!1sen!2suk"
+                    width="800" height="800" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div><br>
+            <p>Opening times:<br>
+                Mon-Fri 2pm-4pm<br>
+                Sat & Sun 10am-4pm</p>
+        </div>
+    </div>
     </div>
     <footer>
         <ul class="social-networks">
