--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
     </ul>
 
     <div>
-        <h1>Homes for Hounds</h1>
+        <h1>Homes for Hounds<img class="logo" src="assets/images/logo3cropresize.png" alt="Homes for Hounds logo"
+                width="280" height="80"></h1>
+
     </div>
 
     <div id="hero-outer">
