changed card class background color and border radius

--- a/dogs.html
+++ b/dogs.html
@@ -19,14 +19,19 @@
     </ul><br>
 
     <div class="container">
-        <p>Here are all the dogs currently available for adoption. If you see a dog you are interested in and
-            would like more information, please contact us using the form on the <a href="form.html">Get in Touch</a>
-            page. We are always happy to talk about
-            how wonderful our dogs are and they love visitors too so why not come along and meet them!</p>
+        <div class="row">
+            <div class="column">
+                <p>Here are all the dogs currently available for adoption. If you see a dog you are interested in and
+                    would like more information, please contact us using the form on the <a href="form.html">Get in
+                        Touch</a>
+                    page. We are always happy to talk about
+                    how wonderful our dogs are and they love visitors too so why not come along and meet them!</p>
+            </div>
+        </div>
     </div>
 
     <div class="card-deck">
-        <div class="card bg-light text-dark">
+        <div class="card">
             <img class="card-img-top" src="assets/images/hawk.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Hawk</h4>
@@ -37,7 +42,7 @@
                 <p class="card-text"><i class="fa-solid fa-child"></i> Good with children</p>
             </div>
         </div>
-        <div class="card bg-light text-dark">
+        <div class="card">
             <img class="card-img-top" src="assets/images/mimi.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Mimi</h4>
@@ -48,7 +53,7 @@
                 <p class="card-text"><i class="fa-solid fa-child"></i> Good with children</p>
             </div>
         </div>
-        <div class="card bg-light text-dark">
+        <div class="card">
             <img class="card-img-top" src="assets/images/trevor.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Trevor</h4>
@@ -59,7 +64,7 @@
                 <p class="card-text"><i class="fa-solid fa-child"></i> Good with children</p>
             </div>
         </div>
-        <div class="card bg-light text-dark">
+        <div class="card">
             <img class="card-img-top" src="assets/images/dotty.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Dotty</h4>
@@ -70,7 +75,7 @@
                 <p class="card-text"><i class="fa-solid fa-child"></i> Good with children</p>
             </div>
         </div>
-        <div class="card bg-light text-dark">
+        <div class="card">
             <img class="card-img-top" src="assets/images/anton.jpg" alt="Photo of dog">
             <div class="card-body text-center">
                 <h4 class="card-title">Anton</h4>
