--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     </ul>
 
     <div>
-        <h1>Homes for Hounds<img class="logo" src="assets/images/logo3cropresize.png" alt="Homes for Hounds logo" width="280" height="80"></h1>
+        <h1>Homes for Hounds<img class="logo" src="assets/images/logo3cropresize.png" alt="Homes for Hounds logo"
+                width="280" height="80"></h1>
     </div>
 
-    <div id="hero-outer">
-        <div id="hero-image" img src="assets/images/tonia_kraakman1.jpg" alt="Closeup of dogs face">
-        </div>
+    <div>
+        <img id="hero-image" src="assets/images/tonia_kraakman1.jpg" alt="Closeup of dogs face">
     </div>
+
 
     <div class="container">
         <div class="row">
