color palette and hero image embedded in readme

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-4">
+            <div class="col-sm-4 vr">
                 <h2>About Us</h2>
                 <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. These dogs
                     settle
@@ -59,7 +59,7 @@
                     <li>Temperament - Intelligent, Gentle, Affectionate & Even Tempered.</li>
                 </ul>
             </div>
-            <div class="col-sm-4">
+            <div class="col-sm-4 vr">
                 <h2>Latest News</h2>
                 <p><strong>25/06/23</strong> New arrivals! Please check out our new arrivals on the Meet our Dogs page.
                 </p>
