--- a/form.html
+++ b/form.html
@@ -31,7 +31,7 @@
     <div class="container">
         <form method="POST" action="https://formdump.codeinstitute.net/">
             <div class="row">
-                <div class="col-sm-6">
+                <div class="col-sm-6 vr">
                     <h2>Get in Touch</h2>
                     <div class="row">
                         <div class="col-25">
