submit button on contact form positioned and styled. Readme updated

--- a/form.html
+++ b/form.html
@@ -37,7 +37,7 @@
                         <div class="col-25">
                             <label for="name">Name:</label>
                         </div>
-                        <div class="col-75">
+                        <div class="col-25">
                             <input type="text" id="name" name="name" placeholder="Your name.." required>
                         </div>
                     </div>
@@ -59,7 +59,7 @@
                     </div>
                     <div class="row">
                         <div class="col-25">
-                            <label for="dogs">Name of dog:</label>
+                            <label for="dogs">Name of Dog:</label>
                         </div>
                         <div class="col-75">
                             <select id="dogs" name="dogs">
@@ -84,28 +84,28 @@
                     </div>
                 </div>
         </form>
-    
-    <div class="col-sm-6">
-        <h2>How to Find Us</h2>
-        <p>We are conveniently located just minutes from the A48 in Cross Hands, South Wales</p>
-        <p> Homes for Hounds<br>
-            Greyhound Lane<br>
-            Greyhound<br>
-            GR37 4ND<br>
-            Telephone: 0000 000 000<br>
-        <p>You can also contact us by email hello@homesforhounds.com or via our social media links below</p>
-        <div class="google-map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11172.809879811417!2d-3.188287399557932!3d51.412969459065074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486ef0ec09dcf8c9%3A0x4309b74e3e39b881!2sGreyhound%20Trust%20Southwest%20Wales!5e0!3m2!1sen!2suk!4v1687791931838!5m2!1sen!2suk"
-                width="800" height="800" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
-        </div><br>
-        <p>Opening times:<br>
-            Mon-Fri 2pm-4pm<br>
-            Sat & Sun 10am-4pm</p>
+
+        <div class="col-sm-6">
+            <h2>How to Find Us</h2>
+            <p>We are conveniently located just minutes from the A48 in Cross Hands, South Wales</p>
+            <p> Homes for Hounds<br>
+                Greyhound Lane<br>
+                Greyhound<br>
+                GR37 4ND<br>
+                Telephone: 0000 000 000<br>
+            <p>You can also contact us by email hello@homesforhounds.com or via our social media links below</p>
+            <div class="google-map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d11172.809879811417!2d-3.188287399557932!3d51.412969459065074!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x486ef0ec09dcf8c9%3A0x4309b74e3e39b881!2sGreyhound%20Trust%20Southwest%20Wales!5e0!3m2!1sen!2suk!4v1687791931838!5m2!1sen!2suk"
+                    width="800" height="800" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div><br>
+            <p>Opening times:<br>
+                Mon-Fri 2pm-4pm<br>
+                Sat & Sun 10am-4pm</p>
         </div>
     </div>
-</div>
+    </div>
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
