--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
         </div>
     </div>
-
+    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
