Add about.html page to improve UX and make more visual

--- a/dogs.html
+++ b/dogs.html
@@ -14,6 +14,7 @@
 <body>
     <ul class="nav-bar">
         <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
+        <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
         <li><a class="active" href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul><br>
