--- a/form.html
+++ b/form.html
@@ -16,6 +16,7 @@
 <body>
     <ul class="nav-bar">
         <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
+        <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
         <li><a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a class="active" href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul><br>
