--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 <body>
     <ul class="nav-bar">
         <li><a class="active" href="index.html" aria-label="Go to the top of the page">Home</a></li>
+        <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
         <li><a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul>
@@ -133,7 +134,7 @@
             </div>
         </div>
     </div>
-    <button onclick="topFunction()" id="myBtn" title="Go to top">Top</button>
+
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
