FIX Used bootstrap form-group to make input fields on form equal lengths

--- a/about.html
+++ b/about.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+    <!--Nav bar-->
     <ul class="nav-bar">
         <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
         <li><a class="active" href="about.html" aria-label="Go to About Us">About Us</a></li>
@@ -23,11 +24,14 @@
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul>
 
+    <!--Logo-->
     <div class="container">
         <div class="row">
-            <div class="col-sm-6"> 
-                <img src="assets/images/hawk.jpg" alt="Photo of dog">
+            <div class="col-sm-6">
+                <img class="logo" src="assets/images/homes-for-hounds-logo400x300.png" alt="Graphic of dog">
             </div>
+
+            <!--Content-->
             <div class="col-sm-6">
                 <h2>About Us</h2>
                 <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. These dogs
@@ -45,7 +49,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="column">
+            <div class="col-sm-6">
                 <h2>Did You Know?</h2>
                 <p>Did you know the greyhound is one of the oldest breeds in history? These noble dogs have been traced
                     back
@@ -53,6 +57,9 @@
                     years to early cave drawings and are the only breed mentioned in the Bible. By giving a greyhound a
                     home, you are taking
                     on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
+            </div>
+            <div class="col-sm-6">
+                <img id="dogs-playing" src="assets/images/mark-galer_cropresize.jpg" alt="Photo of dog">
             </div>
         </div>
     </div>
@@ -75,6 +82,7 @@
         </div>
     </div>
 
+    <!--Footer & Social media links-->
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
