--- a/dogs.html
+++ b/dogs.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+<!--Nav bar-->
     <ul class="nav-bar">
         <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
         <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
@@ -19,6 +20,7 @@
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul><br>
 
+<!--Meet our dogs-->
     <div class="container">
         <div class="row">
             <div class="column">
@@ -88,6 +90,8 @@
             </div>
         </div>
     </div>
+
+<!--Footer & Social media links-->
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
