--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 
 <body>
+<!--Nav bar-->
     <ul class="nav-bar">
         <li><a class="active" href="index.html" aria-label="Go to the top of the page">Home</a></li>
         <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
@@ -23,46 +24,24 @@
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul>
 
+<!--Logo-->
     <div>
         <h1>Homes for Hounds<img class="logo" src="assets/images/logo3cropresize.png" alt="Homes for Hounds logo"
                 width="280" height="80"></h1>
     </div>
 
+<!--Hero image-->
     <div>
         <img id="hero-image" src="assets/images/tonia_kraakman1.jpg" alt="Closeup of dogs face">
     </div>
 
-
+<!--Content-->
     <div class="container">
         <div class="row">
             <div class="col-sm-4 vr">
-                <h2>About Us</h2>
-                <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. These dogs
-                    settle
-                    into retirement easily and make wonderful pets.</p>
-                <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs
-                    suitable for all types of households including those with children and other animals.</p>
-                <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the
-                    house. They have a naturally calm, laid-back temperament and adapt from life on the track to life on
-                    the
-                    couch with ease. </p>
-                <p>Did you know the greyhound is one of the oldest breeds in history? These noble dogs have been traced
-                    back
-                    over 4,000
-                    years to early cave drawings and are the only breed mentioned in the Bible. By giving a greyhound a
-                    home, you are taking
-                    on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
-                <strong>Facts & Figures</strong><br>
-                <ul>
-                    <li>Height: Male - 71-76cm, Female - 69-71cm</li>
-                    <li>Weight: Male - 27-40KG, Female - 26-34KG</li>
-                    <li>Average Retirement Age: Between 3 - 5 years of age</li>
-                    <li>Average Lifespan: Up to 15 years!</li>
-                    <li>Exercise Required: Perfectly happy with two twenty minute walks a day Greyhounds are built for
-                        speed, not stamina, and
-                        use up their energy in short bursts.</li>
-                    <li>Temperament - Intelligent, Gentle, Affectionate & Even Tempered.</li>
-                </ul>
+                <h2>What We Do</h2>
+                <p>Thanks for visiting the Homes for Hounds website. To learn more about what we do take a look at our <a href="about.html" aria-label="Go to About Us">About Us</a></li> page.</p>
+                
             </div>
             <div class="col-sm-4 vr">
                 <h2>Latest News</h2>
@@ -135,6 +114,7 @@
         </div>
     </div>
 
+<!--Footer & Social media links-->
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
