Add Sticky nav bar on all pages

--- a/index.html
+++ b/index.html
@@ -16,105 +16,75 @@
 </head>
 
 <body>
-<!--Nav bar-->
-    <ul class="nav-bar">
+    <!--Nav bar-->
+    <ul class="nav-bar sticky-top">
         <li><a class="active" href="index.html" aria-label="Go to the top of the page">Home</a></li>
         <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
         <li><a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul>
 
-<!--Logo-->
+    <!--Logo-->
     <div>
         <h1>Homes for Hounds<img class="logo" src="assets/images/logo3cropresize.png" alt="Homes for Hounds logo"
                 width="280" height="80"></h1>
     </div>
 
-<!--Hero image-->
+    <!--Hero image-->
     <div>
         <img id="hero-image" src="assets/images/tonia_kraakman1.jpg" alt="Closeup of dogs face">
     </div>
 
-<!--Content-->
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-4 vr">
-                <h2>What We Do</h2>
-                <p>Thanks for visiting the Homes for Hounds website. To learn more about what we do take a look at our <a href="about.html" aria-label="Go to About Us">About Us</a></li> page.</p>
-                
+    <!--Content-->
+    <div class="parent-container d-sm-flex">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>What We Do</h2>
+                    <p>Thanks for visiting the Homes for Hounds website. To learn more about what we do take a look at
+                        our
+                        <a href="about.html" aria-label="Go to About Us">About Us</a></li> page.
+                    </p>
+                </div>
             </div>
-            <div class="col-sm-4 vr">
-                <h2>Latest News</h2>
-                <p><strong>25/06/23</strong> New arrivals! Please check out our new arrivals on the Meet our Dogs page.
-                </p>
-                <p><strong>01/05/23</strong> Open day at the centre, why not come along and meet our hounds.</p>
-                <p><strong>14/04/23</strong> Thank you to our wonderful volunteers who have raised a staggering £1,374
-                    through fund-raising
-                    activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
-                <p><strong>01/01/23</strong> Happy New Year from all the hounds!</p>
-                <p><strong>25/12/22</strong> Merry Christmas. Our hounds are all tucking in to their Christmas dinner -
-                    hopefully next Christmas they will all
-                    have homes of their own<br>
-                    <img src="assets/images/group.jpg" alt="dogs walking" class="blog-image">
-                </p>
-                <p><strong>24/09/22</strong> There was a fantastic turnout of over 30 sighthounds for the annual <a
-                        href="https://www.greatglobalgreyhoundwalk.co.uk" target="_blank">Great Global Greyhound
-                        Walk.</a>
-                    Thanks to all the volunteers who helped to walk them at Cosmeston Park near Cardiff<br>
-                <p><strong>06/08/22</strong> Make sure you keep your dogs cool in this hot weather. Here at the centre
-                    our
-                    dogs are chilling
-                    out in their kennels during the day and being walked either early in the morning or late evening.
-                    Remember greyhounds do not cope well with heat</p>
-                <p><strong>23/05/22</strong> Congratulations to Frankie who has found his forever home with the lovely
-                    Claire & James.</p>
-                <p><strong>14/02/22</strong> Happy Valentine's day from the hounds. All our dogs are looking for their
-                    special someone to love them...Could that be you?</p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>Latest News & Events</h2>
+                    <p><strong>25/06/23</strong> New arrivals! Please check out our new arrivals on the Meet our Dogs
+                        page.
+                    </p>
+                    <p><strong>01/05/23</strong> Open day at the centre, why not come along and meet our hounds.</p>
+                    <p><strong>14/04/23</strong> Thank you to our wonderful volunteers who have raised a staggering
+                        £1,374
+                        through fund-raising
+                        activities including a cake sale and sponsored bicycle ride. Well done to you all.</p>
+                    <p><strong>01/01/23</strong> Happy New Year from all the hounds!</p>
+                    <p><strong>25/12/22</strong> Merry Christmas. Our hounds are all tucking in to their Christmas
+                        dinner -
+                        hopefully next Christmas they will all
+                        have homes of their own<br>
+                        <img src="assets/images/group.jpg" alt="dogs walking" class="blog-image">
+                    </p>
+                    <p><strong>24/09/22</strong> There was a fantastic turnout of over 30 sighthounds for the annual <a
+                            href="https://www.greatglobalgreyhoundwalk.co.uk" target="_blank">Great Global Greyhound
+                            Walk.</a>Thanks to all the volunteers who helped to walk them at Cosmeston Park near Cardiff<br>
+                </div>
             </div>
-            <div class="col-sm-4">
-                <h2>Articles</h2>
-                <p>Please follow the links below for info on this gentle breed and articles on how to care for them.</p>
-                <ul>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
-                            target="_blank">Are you ready to adopt a greyhound?</a></li>
-                    <li><a rel="external"
-                            href="https://www.barleykennels.co.uk/care/what-is-your-new-adopted-greyhound-thinking"
-                            target="_blank">What is your greyhound thinking?</a></li>
-                    <li><a rel="external"
-                            href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
-                            target="_blank">Travelling safely with your greyhound</a></li>
-                    <li><a rel="external" href="https://greyhoundrescuewales.co.uk/dog-body-language/"
-                            target="_blank">Reading dog body language</a></li>
-                    <li><a rel="external"
-                            href="https://www.greyhoundtrust.org.uk/assets/000/004/114/crate_training_original.pdf?1581612865"
-                            target="_blank">Crate training</a></li>
-                    <li><a rel="external"
-                            href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
-                            target="_blank">Understanding separation anxiety</a></li>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-prey-drive"
-                            target="_blank">What is prey drive?</a></li>
-                    <li><a rel="external"
-                            href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
-                            target="_blank">Guide to nail and teeth care</a></li>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/harnesses" target="_blank">Choosing
-                            the
-                            right harness</a></li>
-                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/correct-weight-for-a-greyhound"
-                            target="_blank">Is your greyhound the correct weight?</a></li>
-                    <li><a rel="external"
-                            href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
-                            target="_blank">Feeding a balanced diet</a></li>
-                    <li><a rel="external"
-                            href="https://www.greyhoundtrust.org.uk/assets/000/004/111/training_tips_original.pdf?1581612710"
-                            target="_blank">Teaching basic commands</a></li>
-                    <li><a rel="external" href="https://greyhoundrescuewales.co.uk/resource-guarding/"
-                            target="_blank">Resource guarding</a></li>
-                </ul>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <h2>Testimonial</h2>
+                    <p>Please follow the links below for info on this gentle breed and articles on how to care for them.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
 
-<!--Footer & Social media links-->
+    <!--Footer & Social media links-->
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
