--- a/about.html
+++ b/about.html
@@ -17,28 +17,26 @@
 
 <body>
     <!--Nav bar-->
-    <ul class="nav-bar">
+    <ul class="nav-bar sticky-top">
         <li><a href="index.html" aria-label="Go to the Home page">Home</a></li>
         <li><a class="active" href="about.html" aria-label="Go to About Us">About Us</a></li>
         <li><a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul>
 
-    <!--Logo-->
-    <div class="container">
+    <!--Content-->
+    <div class="container-fluid" id="about1">
         <div class="row">
-            <div class="col-sm-6">
-                <img class="logo" src="assets/images/homes-for-hounds-logo400x300.png" alt="Graphic of dog">
+            <div class="col-lg-5">
+                <img id="logo" class="rounded" src="assets/images/homes-for-hounds-logo400x300.png" alt="Graphic of dog">
             </div>
-
-            <!--Content-->
-            <div class="col-sm-6">
+            <div class="col-lg-7">
                 <h2>About Us</h2>
-                <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. These dogs
+                <p>Homes for hounds are a charity dedicated to the re-homing of retired racing greyhounds. We were established in 1988 and since then have rehomed many hundreds of retired dogs to their forever homes. These dogs
                     settle
                     into retirement easily and make wonderful pets.</p>
                 <p>If you are considering re-homing a dog then why not speak to us about our greyhounds. We have dogs
-                    suitable for all types of households including those with children and other animals.</p>
+                    suitable for all types of households including those with children and other animals. You can contact us through our <a href="form.html" aria-label="Go to About Us">Get in Touch</a></li> page.</p></p>
                 <p>Greyhounds are easy to keep, they require surprisingly little exercise and are quiet and clean in the
                     house. They have a naturally calm, laid-back temperament and adapt from life on the track to life on
                     the
@@ -46,8 +44,8 @@
             </div>
         </div>
     </div>
-
-    <div class="container">
+    <div class="parent-container d-sm-flex">
+    <div class="container" id="about2">
         <div class="row">
             <div class="col-sm-6">
                 <h2>Did You Know?</h2>
@@ -59,18 +57,52 @@
                     on a true thoroughbred and a breed that has been “man's best friend” for thousands of years!</p>
             </div>
             <div class="col-sm-6">
-                <img id="dogs-playing" src="assets/images/mark-galer_cropresize.jpg" alt="Photo of dog">
+                <img id="dogs-playing" src="assets/images/mark-galer_cropresize.jpg" class="rounded"
+                    alt="Photo of dogs playing on beach">
             </div>
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" id="about2a">
         <div class="row">
-            <div class="column">
+            <div class="col-sm-12">
+                <h2>Articles</h2>
+                <p>Please follow the links below for info on this gentle breed and articles on how to care for them.</p>
+                <ul>
+                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/are-you-ready-to-adopt-a-greyhound"
+                            target="_blank">Are you ready to adopt a greyhound?</a></li>
+                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-your-new-adopted-greyhound-thinking"
+                            target="_blank">What is your greyhound thinking?</a></li>
+                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/travelling-safely-with-your-greyhound"
+                            target="_blank">Travelling safely with your greyhound</a></li>
+                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/understanding-separation-anxiety-in-greyhounds"
+                            target="_blank">Understanding separation anxiety</a></li>
+                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/what-is-prey-drive" target="_blank">What is prey
+                            drive?</a></li>
+                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/the-importance-of-nail-and-teeth-care-for-your-dog"
+                            target="_blank">Guide to nail and teeth care</a></li>
+                    <li><a rel="external" href="https://www.barleykennels.co.uk/care/feeding-a-balanced-diet-to-your-greyhound"
+                            target="_blank">Feeding a balanced diet</a></li>
+                    <li><a rel="external"
+                            href="https://www.greyhoundtrust.org.uk/assets/000/004/111/training_tips_original.pdf?1581612710"
+                            target="_blank">Teaching basic commands</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    </div>
+
+    <div class="container-fluid" id="about3">
+        <div class="row">
+            <div class="col-sm-8">
+                <img id="dogs-playing" class="rounded" src="assets/images/annie-spratt_resize620.jpg"
+                    alt="Photo of dog lying down">
+            </div>
+            <div class="col-sm-4">
                 <h2>Facts & Figures</h2>
                 <ul>
                     <li>Height: Male - 71-76cm, Female - 69-71cm</li>
-                    <li>Weight: Male - 27-40KG, Female - 26-34KG</li>
+                    <li>Weight: Male - 27-40kg, Female - 26-34kg</li>
                     <li>Average Retirement Age: Between 3 - 5 years of age</li>
                     <li>Average Lifespan: Up to 15 years!</li>
                     <li>Exercise Required: Perfectly happy with two twenty minute walks a day Greyhounds are built for
