--- a/dogs.html
+++ b/dogs.html
@@ -12,23 +12,23 @@
 </head>
 
 <body>
-<!--Nav bar-->
-    <ul class="nav-bar">
+    <!--Nav bar-->
+    <ul class="nav-bar sticky-top">
         <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
         <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
         <li><a class="active" href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
         <li><a href="form.html" aria-label="Go to contact information">Get in Touch</a></li>
     </ul><br>
 
-<!--Meet our dogs-->
+    <!--Meet our dogs-->
     <div class="container">
         <div class="row">
-            <div class="column">
+            <div class="col-sm-12">
                 <p>Here are all the dogs currently available for adoption. If you see a dog you are interested in and
                     would like more information, please contact us using the form on the <a href="form.html">Get in
                         Touch</a>
                     page. We are always happy to talk about
-                    how wonderful our dogs are and they love visitors too so why not come along and meet them!</p>
+                    how wonderful our dogs are and they love visitors too, so why not come along and meet them!</p>
             </div>
         </div>
     </div>
@@ -91,7 +91,7 @@
         </div>
     </div>
 
-<!--Footer & Social media links-->
+    <!--Footer & Social media links-->
     <footer>
         <ul class="social-networks">
             <li><a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
