--- a/form.html
+++ b/form.html
@@ -15,7 +15,7 @@
 
 <body>
     <!--Nav bar-->
-    <ul class="nav-bar">
+    <ul class="nav-bar sticky-top">
         <li><a href="index.html" aria-label="Go to the top of the page">Home</a></li>
         <li><a href="about.html" aria-label="Go to About Us">About Us</a></li>
         <li><a href="dogs.html" aria-label="Go to meet our dogs page">Meet our Dogs</a></li>
@@ -25,12 +25,13 @@
     <!--Contact form & map-->
     <div class="container">
         <div class="row">
-            <div class="column">
+            <div class="column-12">
                 <p>Please use this form to enquire about our dogs. We love to hear from potential new owners
                     and will get back to you to discuss the rehoming process in more detail</p>
             </div>
         </div>
     </div>
+    <br>
     <div class="container">
         <form method="POST" action="https://formdump.codeinstitute.net/">
             <div class="row">
